merge furioso